Fix: preloader covering menu button

--- a/src/stylesheets/styles/_3_components.scss
+++ b/src/stylesheets/styles/_3_components.scss
@@ -5,11 +5,10 @@
   @include flex-row;
   @include flex-center;
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  padding-top: 50px;
+  top: 50px;
+  left: calc(50% - 35px/2);
+  width: 35px;
+  height: 35px;
   background-color: transparent;
   z-index: 10000;
   font-size: 50px;
@@ -17,8 +16,8 @@
   font-weight: 700;
   color: white;
   img {
-    width: 35px;
-    height: 35px;
+    width: 100%;
+    height: 100%;
   }
 }
 
